resolved the text overflow bug

--- a/src/components/css/discussionForum.css
+++ b/src/components/css/discussionForum.css
@@ -66,6 +66,7 @@ body {
   row-gap: 10px;
 }
 .d-item-ques {
+  word-wrap: break-word;
   grid-column: 1/4;
   padding-bottom: 10px;
 }
@@ -104,6 +105,8 @@ body {
 .d-item-ques-head-ques {
   font-size: 110%;
   color: #2e1525;
+  word-break: break-word;
+  grid-column: 1/4;
 }
 .d-answers-all {
   box-shadow: rgba(221, 230, 237, 0.4) 0px 16px 32px 0px;
@@ -122,9 +125,14 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   row-gap: 10px;
-  margin-left: 5px;
+  margin-left: 15px;
   padding-left: 10px;
   border-left: 2px solid rgb(196, 196, 196);
+}
+.d-answer-username{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .d-answer-username span:nth-of-type(2) {
   font-size: 90%;
@@ -135,13 +143,9 @@ body {
   padding-top: 5px;
   grid-column: 1/4;
 }
-.d-answer-body div:nth-of-type(2) {
-  justify-self: end;
-  grid-column: 1/4;
-}
-.d-answer-body div:nth-of-type(3) {
-  justify-self: end;
-  font-size: 80%;
-  color: #adadad;
-  grid-column: 1/4;
+.d-answer-dropdown .btn{
+  padding: .25rem .35rem;
+  font-size: .65rem;
+  background-color: white;
+  border: none;
 }
